# wordlearner

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
apps/: asgi.py  urls.py  wsgi.py
apps/users/: models.py  urls.py  utils.py
apps/users/forms/: __init__.py  user_authentication_form.py  user_registration_form.py
apps/users/migrations/: 0001_initial.py  0002_user_is_email_verified.py  0003_alter_user_email.py
apps/users/views/: __init__.py  user_login.py  user_registration.py
requirements/: base.txt  development.txt
settings/: base.py  main.py
templates/: base.html
templates/included/: styles.html
templates/users/: login.html  registration.html
