[tool.poetry]
name = "uacraft-be"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "uacraft_be"}]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^4.2.1"
django-environ = "^0.11.2"
psycopg2 = "^2.9.9"
django-cors-headers = "^4.3.1"
django-extensions = "^3.2.3"
djangorestframework = "^3.15.1"
slugify = "^0.0.1"
gunicorn = "^22.0.0"
whitenoise = "^6.6.0"
sqlparse = "^0.5.0"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.2"
flake8 = "^7.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
force_single_line = true
line_length = 120
order_by_type = false
profile = 'black'